--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,16 +1,25 @@
-
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import "node_modules/font-awesome/scss/font-awesome";
 
 .navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
-@import "node_modules/font-awesome/scss/font-awesome";
+#website {
+    background-image: url('/images/background.jpeg');
+    height: 100%;
+}
+
+#chartdiv {
+    width: 100%;
+    height: 500px;
+}
+
+
+
