--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@charset "UTF-8";
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
@@ -13708,6 +13708,15 @@ a.text-dark:focus {
   clip: auto;
 }
 
+@font-face {
+  font-family: Monaco;
+  src: url("/fonts/Monaco.ttf");
+}
+
+body {
+  font-family: "Monaco";
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
@@ -13721,5 +13730,14 @@ a.text-dark:focus {
 #chartdiv {
   width: 100%;
   height: 500px;
+}
+
+.card {
+  border-radius: 0;
+}
+
+.dropdown-menu {
+  padding: 0;
+  margin: 0;
 }
 
