--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Lobster);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
@@ -13725,6 +13725,10 @@ body {
 #website {
   background-image: url("/images/background.jpeg");
   height: 100%;
+}
+
+.navbar-brand {
+  font-family: "Lobster";
 }
 
 #chartdiv {
