--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -17,6 +17,10 @@ body{
     height: 100%;
 }
 
+.navbar-brand{
+    font-family: 'Lobster';
+}
+
 #chartdiv {
     width: 100%;
     height: 500px;
