--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 // Fonts
-//@import url('https://fonts.googleapis.com/css?family=DejaVu+Sans+Mono');
+@import url('https://fonts.googleapis.com/css?family=Lobster');
 
 // Variables
 @import 'variables';
