--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lobster);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Lobster|Montserrat);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
@@ -13714,7 +13714,7 @@ a.text-dark:focus {
 }
 
 body {
-  font-family: "Monaco";
+  font-family: "Montserrat";
 }
 
 .navbar-laravel {
