--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -7,13 +7,15 @@ body{
     font-family: 'Montserrat';
 }
 
-.navbar-laravel {
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+main{
+  min-height: 80vh;
+}
+
+nav{
+    padding: 20px!important;
 }
 
 #website {
-    background-image: url('/images/background.jpeg');
     height: 100%;
 }
 
@@ -33,4 +35,48 @@ body{
 .dropdown-menu{
     padding: 0;
     margin: 0;
+}
+
+.alert{
+    border-radius: 0!important;
+}
+
+.container-fluid{
+    padding: 0;
+    margin: 0;
+
+    .row{
+        margin: 0;
+    }
+
+    .col-md-12{
+        padding: 0;
+    }
+}
+
+.welcome{
+    background-image: url('/images/background.jpeg');
+    min-height: 80vh;
+    box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    line-height: 60px;
+
+    .welcome-text{
+        width: 70%;
+    }
+
+    h1{
+        font-weight: 900;
+        font-family: 'Raleway';
+        line-height: 60px;
+    }
+}
+
+.nav-item{
+    a{
+        opacity: 1!important;
+    }
 }
