--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -80,3 +80,10 @@ nav{
         opacity: 1!important;
     }
 }
+
+.link{
+    color: blue!important;
+    :hover{
+        color: #3f51b5;
+    }
+}
