--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,7 @@
 @import 'variables';
 
 // Bootstrap
-@import '~daemonite-material/css/material.min.css';
+@import "~daemonite-material/assets/scss/material";
 
 // Font awesome
 @import "~font-awesome/scss/font-awesome";
