--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,8 @@
 // Bootstrap
 @import "~daemonite-material/assets/scss/material";
 
+@import "~jquery-bar-rating/dist/themes/fontawesome-stars.css";
+
 // Font awesome
 @import "~font-awesome/scss/font-awesome";
 
