--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Lobster|Montserrat|Raleway|Material+Icons');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Roboto|Material+Icons');
 
 // Variables
 @import 'variables';
@@ -9,6 +9,9 @@
 
 // Bootstrap
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+// MDB
+@import "~mdbootstrap/scss/mdb";
 
 // Custom styles
 @import "main";
