--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14806,183 +14806,183 @@ table.table-sm td {
 }
 
 .masonry-with-columns div:nth-child(1) {
-  height: 397px;
-  line-height: 397px;
+  height: 209px;
+  line-height: 209px;
 }
 
 .masonry-with-columns div:nth-child(2) {
+  height: 226px;
+  line-height: 226px;
+}
+
+.masonry-with-columns div:nth-child(3) {
+  height: 262px;
+  line-height: 262px;
+}
+
+.masonry-with-columns div:nth-child(4) {
+  height: 456px;
+  line-height: 456px;
+}
+
+.masonry-with-columns div:nth-child(5) {
+  height: 261px;
+  line-height: 261px;
+}
+
+.masonry-with-columns div:nth-child(6) {
+  height: 201px;
+  line-height: 201px;
+}
+
+.masonry-with-columns div:nth-child(7) {
+  height: 497px;
+  line-height: 497px;
+}
+
+.masonry-with-columns div:nth-child(8) {
+  height: 182px;
+  line-height: 182px;
+}
+
+.masonry-with-columns div:nth-child(9) {
+  height: 284px;
+  line-height: 284px;
+}
+
+.masonry-with-columns div:nth-child(10) {
+  height: 241px;
+  line-height: 241px;
+}
+
+.masonry-with-columns div:nth-child(11) {
+  height: 270px;
+  line-height: 270px;
+}
+
+.masonry-with-columns div:nth-child(12) {
+  height: 284px;
+  line-height: 284px;
+}
+
+.masonry-with-columns div:nth-child(13) {
+  height: 448px;
+  line-height: 448px;
+}
+
+.masonry-with-columns div:nth-child(14) {
+  height: 284px;
+  line-height: 284px;
+}
+
+.masonry-with-columns div:nth-child(15) {
+  height: 478px;
+  line-height: 478px;
+}
+
+.masonry-with-columns div:nth-child(16) {
   height: 277px;
   line-height: 277px;
 }
 
-.masonry-with-columns div:nth-child(3) {
-  height: 398px;
-  line-height: 398px;
-}
-
-.masonry-with-columns div:nth-child(4) {
-  height: 347px;
-  line-height: 347px;
-}
-
-.masonry-with-columns div:nth-child(5) {
-  height: 461px;
-  line-height: 461px;
-}
-
-.masonry-with-columns div:nth-child(6) {
-  height: 238px;
-  line-height: 238px;
-}
-
-.masonry-with-columns div:nth-child(7) {
-  height: 137px;
-  line-height: 137px;
-}
-
-.masonry-with-columns div:nth-child(8) {
-  height: 355px;
-  line-height: 355px;
-}
-
-.masonry-with-columns div:nth-child(9) {
-  height: 199px;
-  line-height: 199px;
-}
-
-.masonry-with-columns div:nth-child(10) {
-  height: 245px;
-  line-height: 245px;
-}
-
-.masonry-with-columns div:nth-child(11) {
-  height: 350px;
-  line-height: 350px;
-}
-
-.masonry-with-columns div:nth-child(12) {
-  height: 118px;
-  line-height: 118px;
-}
-
-.masonry-with-columns div:nth-child(13) {
-  height: 176px;
-  line-height: 176px;
-}
-
-.masonry-with-columns div:nth-child(14) {
-  height: 245px;
-  line-height: 245px;
-}
-
-.masonry-with-columns div:nth-child(15) {
-  height: 469px;
-  line-height: 469px;
-}
-
-.masonry-with-columns div:nth-child(16) {
-  height: 157px;
-  line-height: 157px;
-}
-
 .masonry-with-columns div:nth-child(17) {
-  height: 132px;
-  line-height: 132px;
+  height: 442px;
+  line-height: 442px;
 }
 
 .masonry-with-columns div:nth-child(18) {
-  height: 293px;
-  line-height: 293px;
+  height: 275px;
+  line-height: 275px;
 }
 
 .masonry-with-columns div:nth-child(19) {
-  height: 232px;
-  line-height: 232px;
+  height: 178px;
+  line-height: 178px;
 }
 
 .masonry-with-columns div:nth-child(20) {
-  height: 317px;
-  line-height: 317px;
+  height: 324px;
+  line-height: 324px;
 }
 
 .masonry-with-columns div:nth-child(21) {
-  height: 279px;
-  line-height: 279px;
+  height: 159px;
+  line-height: 159px;
 }
 
 .masonry-with-columns div:nth-child(22) {
-  height: 132px;
-  line-height: 132px;
+  height: 105px;
+  line-height: 105px;
 }
 
 .masonry-with-columns div:nth-child(23) {
-  height: 282px;
-  line-height: 282px;
+  height: 120px;
+  line-height: 120px;
 }
 
 .masonry-with-columns div:nth-child(24) {
-  height: 385px;
-  line-height: 385px;
+  height: 102px;
+  line-height: 102px;
 }
 
 .masonry-with-columns div:nth-child(25) {
-  height: 191px;
-  line-height: 191px;
+  height: 290px;
+  line-height: 290px;
 }
 
 .masonry-with-columns div:nth-child(26) {
-  height: 222px;
-  line-height: 222px;
+  height: 211px;
+  line-height: 211px;
 }
 
 .masonry-with-columns div:nth-child(27) {
-  height: 189px;
-  line-height: 189px;
+  height: 390px;
+  line-height: 390px;
 }
 
 .masonry-with-columns div:nth-child(28) {
-  height: 113px;
-  line-height: 113px;
+  height: 207px;
+  line-height: 207px;
 }
 
 .masonry-with-columns div:nth-child(29) {
-  height: 428px;
-  line-height: 428px;
+  height: 236px;
+  line-height: 236px;
 }
 
 .masonry-with-columns div:nth-child(30) {
-  height: 494px;
-  line-height: 494px;
+  height: 177px;
+  line-height: 177px;
 }
 
 .masonry-with-columns div:nth-child(31) {
-  height: 450px;
-  line-height: 450px;
+  height: 387px;
+  line-height: 387px;
 }
 
 .masonry-with-columns div:nth-child(32) {
-  height: 180px;
-  line-height: 180px;
+  height: 178px;
+  line-height: 178px;
 }
 
 .masonry-with-columns div:nth-child(33) {
-  height: 156px;
-  line-height: 156px;
+  height: 155px;
+  line-height: 155px;
 }
 
 .masonry-with-columns div:nth-child(34) {
-  height: 127px;
-  line-height: 127px;
+  height: 173px;
+  line-height: 173px;
 }
 
 .masonry-with-columns div:nth-child(35) {
-  height: 363px;
-  line-height: 363px;
+  height: 288px;
+  line-height: 288px;
 }
 
 .masonry-with-columns div:nth-child(36) {
-  height: 271px;
-  line-height: 271px;
+  height: 229px;
+  line-height: 229px;
 }
 
 .masonry-with-columns-2 {
@@ -15003,147 +15003,147 @@ table.table-sm td {
 }
 
 .masonry-with-columns-2 div:nth-child(1) {
-  width: 154px;
+  width: 284px;
 }
 
 .masonry-with-columns-2 div:nth-child(2) {
-  width: 211px;
+  width: 87px;
 }
 
 .masonry-with-columns-2 div:nth-child(3) {
-  width: 154px;
+  width: 444px;
 }
 
 .masonry-with-columns-2 div:nth-child(4) {
-  width: 246px;
+  width: 140px;
 }
 
 .masonry-with-columns-2 div:nth-child(5) {
-  width: 174px;
+  width: 293px;
 }
 
 .masonry-with-columns-2 div:nth-child(6) {
-  width: 295px;
+  width: 317px;
 }
 
 .masonry-with-columns-2 div:nth-child(7) {
-  width: 438px;
+  width: 83px;
 }
 
 .masonry-with-columns-2 div:nth-child(8) {
-  width: 439px;
+  width: 253px;
 }
 
 .masonry-with-columns-2 div:nth-child(9) {
-  width: 118px;
+  width: 142px;
 }
 
 .masonry-with-columns-2 div:nth-child(10) {
-  width: 369px;
+  width: 432px;
 }
 
 .masonry-with-columns-2 div:nth-child(11) {
-  width: 275px;
+  width: 125px;
 }
 
 .masonry-with-columns-2 div:nth-child(12) {
-  width: 163px;
+  width: 241px;
 }
 
 .masonry-with-columns-2 div:nth-child(13) {
-  width: 419px;
+  width: 201px;
 }
 
 .masonry-with-columns-2 div:nth-child(14) {
-  width: 468px;
+  width: 329px;
 }
 
 .masonry-with-columns-2 div:nth-child(15) {
-  width: 265px;
+  width: 228px;
 }
 
 .masonry-with-columns-2 div:nth-child(16) {
-  width: 378px;
+  width: 135px;
 }
 
 .masonry-with-columns-2 div:nth-child(17) {
-  width: 458px;
+  width: 221px;
 }
 
 .masonry-with-columns-2 div:nth-child(18) {
-  width: 311px;
+  width: 333px;
 }
 
 .masonry-with-columns-2 div:nth-child(19) {
-  width: 187px;
+  width: 364px;
 }
 
 .masonry-with-columns-2 div:nth-child(20) {
-  width: 350px;
+  width: 148px;
 }
 
 .masonry-with-columns-2 div:nth-child(21) {
-  width: 109px;
+  width: 78px;
 }
 
 .masonry-with-columns-2 div:nth-child(22) {
-  width: 145px;
+  width: 458px;
 }
 
 .masonry-with-columns-2 div:nth-child(23) {
-  width: 151px;
-}
-
-.masonry-with-columns-2 div:nth-child(24) {
-  width: 104px;
-}
-
-.masonry-with-columns-2 div:nth-child(25) {
-  width: 353px;
-}
-
-.masonry-with-columns-2 div:nth-child(26) {
-  width: 176px;
-}
-
-.masonry-with-columns-2 div:nth-child(27) {
-  width: 104px;
-}
-
-.masonry-with-columns-2 div:nth-child(28) {
-  width: 252px;
-}
-
-.masonry-with-columns-2 div:nth-child(29) {
-  width: 407px;
-}
-
-.masonry-with-columns-2 div:nth-child(30) {
   width: 390px;
 }
 
+.masonry-with-columns-2 div:nth-child(24) {
+  width: 455px;
+}
+
+.masonry-with-columns-2 div:nth-child(25) {
+  width: 443px;
+}
+
+.masonry-with-columns-2 div:nth-child(26) {
+  width: 117px;
+}
+
+.masonry-with-columns-2 div:nth-child(27) {
+  width: 141px;
+}
+
+.masonry-with-columns-2 div:nth-child(28) {
+  width: 230px;
+}
+
+.masonry-with-columns-2 div:nth-child(29) {
+  width: 86px;
+}
+
+.masonry-with-columns-2 div:nth-child(30) {
+  width: 201px;
+}
+
 .masonry-with-columns-2 div:nth-child(31) {
-  width: 270px;
+  width: 451px;
 }
 
 .masonry-with-columns-2 div:nth-child(32) {
-  width: 173px;
+  width: 262px;
 }
 
 .masonry-with-columns-2 div:nth-child(33) {
-  width: 352px;
+  width: 340px;
 }
 
 .masonry-with-columns-2 div:nth-child(34) {
-  width: 413px;
+  width: 336px;
 }
 
 .masonry-with-columns-2 div:nth-child(35) {
-  width: 252px;
+  width: 236px;
 }
 
 .masonry-with-columns-2 div:nth-child(36) {
-  width: 185px;
+  width: 257px;
 }
 
 .masonry-with-flex {
@@ -15164,183 +15164,183 @@ table.table-sm td {
 }
 
 .masonry-with-flex div:nth-child(1) {
-  height: 160px;
-  line-height: 160px;
+  height: 238px;
+  line-height: 238px;
 }
 
 .masonry-with-flex div:nth-child(2) {
-  height: 103px;
-  line-height: 103px;
+  height: 138px;
+  line-height: 138px;
 }
 
 .masonry-with-flex div:nth-child(3) {
-  height: 317px;
-  line-height: 317px;
+  height: 376px;
+  line-height: 376px;
 }
 
 .masonry-with-flex div:nth-child(4) {
-  height: 256px;
-  line-height: 256px;
+  height: 455px;
+  line-height: 455px;
 }
 
 .masonry-with-flex div:nth-child(5) {
-  height: 363px;
-  line-height: 363px;
+  height: 318px;
+  line-height: 318px;
 }
 
 .masonry-with-flex div:nth-child(6) {
-  height: 202px;
-  line-height: 202px;
+  height: 349px;
+  line-height: 349px;
 }
 
 .masonry-with-flex div:nth-child(7) {
-  height: 354px;
-  line-height: 354px;
-}
-
-.masonry-with-flex div:nth-child(8) {
-  height: 114px;
-  line-height: 114px;
-}
-
-.masonry-with-flex div:nth-child(9) {
-  height: 132px;
-  line-height: 132px;
-}
-
-.masonry-with-flex div:nth-child(10) {
-  height: 199px;
-  line-height: 199px;
-}
-
-.masonry-with-flex div:nth-child(11) {
-  height: 159px;
-  line-height: 159px;
-}
-
-.masonry-with-flex div:nth-child(12) {
-  height: 187px;
-  line-height: 187px;
-}
-
-.masonry-with-flex div:nth-child(13) {
-  height: 473px;
-  line-height: 473px;
-}
-
-.masonry-with-flex div:nth-child(14) {
-  height: 204px;
-  line-height: 204px;
-}
-
-.masonry-with-flex div:nth-child(15) {
-  height: 186px;
-  line-height: 186px;
-}
-
-.masonry-with-flex div:nth-child(16) {
   height: 334px;
   line-height: 334px;
 }
 
-.masonry-with-flex div:nth-child(17) {
-  height: 396px;
-  line-height: 396px;
+.masonry-with-flex div:nth-child(8) {
+  height: 367px;
+  line-height: 367px;
 }
 
-.masonry-with-flex div:nth-child(18) {
-  height: 474px;
-  line-height: 474px;
+.masonry-with-flex div:nth-child(9) {
+  height: 240px;
+  line-height: 240px;
 }
 
-.masonry-with-flex div:nth-child(19) {
-  height: 321px;
-  line-height: 321px;
-}
-
-.masonry-with-flex div:nth-child(20) {
-  height: 270px;
-  line-height: 270px;
-}
-
-.masonry-with-flex div:nth-child(21) {
-  height: 312px;
-  line-height: 312px;
-}
-
-.masonry-with-flex div:nth-child(22) {
-  height: 143px;
-  line-height: 143px;
-}
-
-.masonry-with-flex div:nth-child(23) {
-  height: 148px;
-  line-height: 148px;
-}
-
-.masonry-with-flex div:nth-child(24) {
-  height: 347px;
-  line-height: 347px;
-}
-
-.masonry-with-flex div:nth-child(25) {
-  height: 275px;
-  line-height: 275px;
-}
-
-.masonry-with-flex div:nth-child(26) {
-  height: 451px;
-  line-height: 451px;
-}
-
-.masonry-with-flex div:nth-child(27) {
-  height: 277px;
-  line-height: 277px;
-}
-
-.masonry-with-flex div:nth-child(28) {
-  height: 393px;
-  line-height: 393px;
-}
-
-.masonry-with-flex div:nth-child(29) {
-  height: 268px;
-  line-height: 268px;
-}
-
-.masonry-with-flex div:nth-child(30) {
+.masonry-with-flex div:nth-child(10) {
   height: 266px;
   line-height: 266px;
 }
 
+.masonry-with-flex div:nth-child(11) {
+  height: 349px;
+  line-height: 349px;
+}
+
+.masonry-with-flex div:nth-child(12) {
+  height: 479px;
+  line-height: 479px;
+}
+
+.masonry-with-flex div:nth-child(13) {
+  height: 118px;
+  line-height: 118px;
+}
+
+.masonry-with-flex div:nth-child(14) {
+  height: 429px;
+  line-height: 429px;
+}
+
+.masonry-with-flex div:nth-child(15) {
+  height: 153px;
+  line-height: 153px;
+}
+
+.masonry-with-flex div:nth-child(16) {
+  height: 433px;
+  line-height: 433px;
+}
+
+.masonry-with-flex div:nth-child(17) {
+  height: 330px;
+  line-height: 330px;
+}
+
+.masonry-with-flex div:nth-child(18) {
+  height: 190px;
+  line-height: 190px;
+}
+
+.masonry-with-flex div:nth-child(19) {
+  height: 157px;
+  line-height: 157px;
+}
+
+.masonry-with-flex div:nth-child(20) {
+  height: 134px;
+  line-height: 134px;
+}
+
+.masonry-with-flex div:nth-child(21) {
+  height: 398px;
+  line-height: 398px;
+}
+
+.masonry-with-flex div:nth-child(22) {
+  height: 169px;
+  line-height: 169px;
+}
+
+.masonry-with-flex div:nth-child(23) {
+  height: 112px;
+  line-height: 112px;
+}
+
+.masonry-with-flex div:nth-child(24) {
+  height: 137px;
+  line-height: 137px;
+}
+
+.masonry-with-flex div:nth-child(25) {
+  height: 200px;
+  line-height: 200px;
+}
+
+.masonry-with-flex div:nth-child(26) {
+  height: 289px;
+  line-height: 289px;
+}
+
+.masonry-with-flex div:nth-child(27) {
+  height: 407px;
+  line-height: 407px;
+}
+
+.masonry-with-flex div:nth-child(28) {
+  height: 261px;
+  line-height: 261px;
+}
+
+.masonry-with-flex div:nth-child(29) {
+  height: 270px;
+  line-height: 270px;
+}
+
+.masonry-with-flex div:nth-child(30) {
+  height: 403px;
+  line-height: 403px;
+}
+
 .masonry-with-flex div:nth-child(31) {
-  height: 445px;
-  line-height: 445px;
+  height: 323px;
+  line-height: 323px;
 }
 
 .masonry-with-flex div:nth-child(32) {
-  height: 452px;
-  line-height: 452px;
+  height: 362px;
+  line-height: 362px;
 }
 
 .masonry-with-flex div:nth-child(33) {
-  height: 443px;
-  line-height: 443px;
+  height: 326px;
+  line-height: 326px;
 }
 
 .masonry-with-flex div:nth-child(34) {
-  height: 387px;
-  line-height: 387px;
-}
-
-.masonry-with-flex div:nth-child(35) {
   height: 128px;
   line-height: 128px;
 }
 
+.masonry-with-flex div:nth-child(35) {
+  height: 500px;
+  line-height: 500px;
+}
+
 .masonry-with-flex div:nth-child(36) {
-  height: 473px;
-  line-height: 473px;
+  height: 361px;
+  line-height: 361px;
 }
 
 ul.stepper {
@@ -15578,15 +15578,6 @@ main {
   border-radius: 0;
 }
 
-.dropdown-menu {
-  padding: 0;
-  margin: 0;
-}
-
-.alert {
-  border-radius: 0 !important;
-}
-
 .container-fluid {
   padding: 0;
   margin: 0;
@@ -15630,7 +15621,7 @@ nav {
   text-align: center;
 }
 
-.nav-item a {
+.nav-item .btn {
   opacity: 1 !important;
   width: 100px;
 }
@@ -15648,11 +15639,12 @@ nav {
   overflow-y: scroll;
 }
 
-.dropdown-menu {
-  min-width: 100%;
-}
-
 .notification {
   color: orangered;
+}
+
+.dropdown-menu {
+  padding: 0;
+  top: 70%;
 }
 
