--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -23,15 +23,6 @@ main{
     border-radius: 0;
 }
 
-.dropdown-menu{
-    padding: 0;
-    margin: 0;
-}
-
-.alert{
-    border-radius: 0!important;
-}
-
 .container-fluid{
     padding: 0;
     margin: 0;
@@ -78,7 +69,7 @@ nav{
 }
 
 .nav-item{
-    a{
+    .btn{
         opacity: 1!important;
         width: 100px;
     }
@@ -96,10 +87,12 @@ nav{
     overflow-y: scroll;
 }
 
-.dropdown-menu{
-    min-width: 100%;
-}
 
 .notification{
     color: orangered;
+}
+
+.dropdown-menu {
+    padding: 0;
+    top: 70%;
 }
