--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -95,3 +95,10 @@ nav{
     padding: 0;
     top: 70%;
 }
+
+.invalid {
+    width: 100%;
+    margin-top: .25rem;
+    font-size: 80%;
+    color: #dc3545;
+}
